--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../node-modules/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Jovem Programador</title>
 </head>
@@ -43,7 +43,7 @@
                         </a>
                     </li>
                     <li class="nav-item mr-2">
-                        <a class="nav-link" href="login/login.html">
+                        <a class="nav-link" href="#">
                             <div class="nav-link-text">
                                 Login
                             </div>
@@ -78,7 +78,7 @@
                 <div class="row py-5">
                     <div class="col-4 my-auto">
                         <!--my-auto centraliza verticalmente o elemento-->
-                        <img class="img-fluid" src="../assets/img/brazil-map.png" alt="Mapa do Brasil">
+                        <img class="img-fluid" src="img/brazil-map.png" alt="Mapa do Brasil">
                         <!--img-fluid deixa a imagem responsiva ao tamanho disponível-->
                     </div>
                     <div class="col-8 align-self-center">
@@ -94,7 +94,7 @@
             <div id="carrossel-aspectos" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner"> <!--identifica o conteúdo dentro do carrossel-->
                     <div class="carousel-item active"><!--item do carrossel-->
-                        <img class="d-block w-100" src="../assets/img/front-end.jpg" alt="Front end">
+                        <img class="d-block w-100" src="img/front-end.jpg" alt="Front end">
                         <div class="carousel-caption d-none d-block">
                             <h2 class="display-4 font-weight-bold">FRONT END</h2>
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit quos,
@@ -105,7 +105,7 @@
                     </div>
                     <div class="carousel-item">
                         <!--d-block w-100: formata a imagem para que ela se expanda ou retraia conforme o tamanho máximo de largura da tela-->
-                        <img class="d-block w-100" src="../assets/img/back-end.jpg" alt="Back end">
+                        <img class="d-block w-100" src="img/back-end.jpg" alt="Back end">
                         <div class="carousel-caption d-none d-block">
                             <h2 class="display-4 font-weight-bold">BACK END</h2>
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex excepturi qui
@@ -114,7 +114,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="../assets/img/base-dados.jpg" alt="Base de dados">
+                        <img class="d-block w-100" src="img/base-dados.jpg" alt="Base de dados">
                         <div class="carousel-caption d-none d-block">
                             <h2 class="display-4 font-weight-bold">BANCO DE DADOS</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis a
@@ -180,7 +180,7 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="text-center">
-                            <img height="150px" width="150px" class="rounded-circle mb-2" src="../assets/img/sheldon.jpg"
+                            <img height="150px" width="150px" class="rounded-circle mb-2" src="img/sheldon.jpg"
                                 alt="Sheldon Cooper">
                             <h3>Sheldon Copper</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit facilis porro
@@ -191,7 +191,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="text-center">
-                            <img height="150px" width="150px" class="rounded-circle mb-2" src="../assets/img/leonard.jpg"
+                            <img height="150px" width="150px" class="rounded-circle mb-2" src="img/leonard.jpg"
                                 alt="Leonard Hofstadter">
                             <h3>Leonard Hofstadter</h3>                            </h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ducimus esse 
@@ -202,7 +202,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="text-center">
-                            <img height="150px" width="150px" class="rounded-circle mb-2" src="../assets/img/amy.jpg"
+                            <img height="150px" width="150px" class="rounded-circle mb-2" src="img/amy.jpg"
                                 alt="Amy Farah Fowler">
                             <h3>Amy Farah Fowler</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, odit, 
@@ -289,7 +289,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
-    <script src="../../node-modules/bootstrap/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
     </script>
